# RTv1

./: CMakeLists.txt  Makefile  README.md
SRC/: additional_ft.c  ft_add_light_spot.c  ft_blur.c  ft_cone.c  ft_cylinder.c  ft_error.c  ft_exit.c  ft_init_all.c  ft_init_scene_part1.c  ft_init_scene_part2.c  ft_key_hook.c  ft_light.c  ft_mous_hook.c  ft_phong.c  ft_plane.c  ft_random.c  ft_render.c  ft_sphere.c  ft_vector_math_part1.c  ft_vector_math_part2.c  ft_vector_math_part3.c  main.c
includes/: rtv1.h
minilibx/man/man3/: mlx_pixel_put.1
